--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1>Athrion.github.io</h1>
+        <h1>Athrion test file</h1>
         <p></p>
       </header>
 
